<resources>
    <string name="app_name">Form Verifier</string>

    <!--  Signup  -->
    <string name="signup">Signup</string>

    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="gender">Gender</string>
    <string name="birthday">Birthday</string>
    <string name="email">Email</string>
    <string name="email_optional">Email(Optional)</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>

    <string name="error_password_not_match">Password does not match</string>
    <string name="error_password_weak">Password too weak</string>

    <!-- Error Messages -->
    <string name="error_birthday">Birthday must not be greater than today</string>
</resources>
